--- a/RealEstate_Dapper_UI/Views/Shared/Components/_DefaultProductListViewComponentPartial/Default.cshtml
+++ b/RealEstate_Dapper_UI/Views/Shared/Components/_DefaultProductListViewComponentPartial/Default.cshtml
@@ -8,95 +8,20 @@
             <div class="row pt-md-5 pt-4">
                 @foreach(var item in Model)
                 {
-                    <div class="col-lg-4 col-md-6">
+                    <div class="col-lg-4 col-md-6 mb-3">
                         <a href="property-single.html">
                             <div class="box16">
-                                <div class="rentext-listing-category"><span>Buy</span><span>Rent</span></div>
-                                <img class="img-fluid" src="" alt="">
+                                <div class="rentext-listing-category"><span>@item.type</span><span></span></div>
+                                    <img class="img-fluid" style="height:300px; width:600px" src="@item.coverImage" alt="">
                                 <div class="box-content">
                                     <h3 class="title">@item.price</h3>
-                                    <span class="post">@item.district, @item.city</span>
+                                    <span class="post">@item.address  @item.district, @item.city</span>
                                 </div>
                             </div>
                         </a>
                     </div>
+                    <br />
                 }
-@*                <div class="col-lg-4 col-md-6">
-                    <a href="property-single.html">
-                        <div class="box16">
-                            <div class="rentext-listing-category"><span>Buy</span><span>Rent</span></div>
-                            <img class="img-fluid" src="~/starter/assets/images/p1.jpg" alt="">
-                            <div class="box-content">
-                                <h3 class="title">$25,00,000</h3>
-                                <span class="post">51 Merrick Way, Coral Gables, USA</span>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-md-6 mt-md-0 mt-4">
-                    <a href="property-single.html">
-                        <div class="box16">
-                            <div class="rentext-listing-category"><span>Buy</span><span>Rent</span></div>
-                            <img class="img-fluid" src="~/starter/assets/images/p2.jpg" alt="">
-                            <div class="box-content">
-                                <h3 class="title">$37,00,000</h3>
-                                <span class="post">51 Merrick Way, Coral Gables, USA</span>
-
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-md-6 mt-lg-0 pt-lg-0 mt-4 pt-md-2">
-                    <a href="property-single.html">
-                        <div class="box16">
-                            <div class="rentext-listing-category"><span>Buy</span><span>Rent</span></div>
-                            <img class="img-fluid" src="~/starter/assets/images/p3.jpg" alt="">
-                            <div class="box-content">
-                                <h3 class="title">$41,00,000</h3>
-                                <span class="post">51 Merrick Way, Coral Gables, USA</span>
-
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-md-6 mt-4 pt-md-2">
-                    <a href="property-single.html">
-                        <div class="box16">
-                            <div class="rentext-listing-category"><span>Buy</span><span>Rent</span></div>
-                            <img class="img-fluid" src="~/starter/assets/images/p4.jpg" alt="">
-                            <div class="box-content">
-                                <h3 class="title">$19,00,000</h3>
-                                <span class="post">51 Merrick Way, Coral Gables, USA</span>
-
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-md-6 mt-4 pt-md-2">
-                    <a href="property-single.html">
-                        <div class="box16">
-                            <div class="rentext-listing-category"><span>Buy</span><span>Rent</span></div>
-                            <img class="img-fluid" src="~/starter/assets/images/p5.jpg" alt="">
-                            <div class="box-content">
-                                <h3 class="title">$26,00,000</h3>
-                                <span class="post">51 Merrick Way, Coral Gables, USA</span>
-
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-md-6 mt-4 pt-md-2">
-                    <a href="property-single.html">
-                        <div class="box16">
-                            <div class="rentext-listing-category"><span>Buy</span><span>Rent</span></div>
-                            <img class="img-fluid" src="~/starter/assets/images/p6.jpg" alt="">
-                            <div class="box-content">
-                                <h3 class="title">$34,00,000</h3>
-                                <span class="post">51 Merrick Way, Coral Gables, USA</span>
-                            </div>
-                        </div>
-                    </a>
-                </div>*@
             </div>
         </div>
     </div>
