--- a/RealEstate_Dapper_UI/Views/_ViewImports.cshtml
+++ b/RealEstate_Dapper_UI/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using RealEstate_Dapper_UI
 @using RealEstate_Dapper_UI.Models
 @using RealEstate_Dapper_UI.Dtos.ProductDtos
+@using RealEstate_Dapper_UI.Dtos.WhoWeAreDtos
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
